# agentic-workflow

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ideas.md  install-gemini.sh  install-opencode.sh  install.sh  plugin.json  uninstall.sh
.beads/: issues.jsonl
.claude/: settings.local.json
.github/: copilot-instructions.md
.opencode/: workflow-config.yaml
.opencode/agents/: crew-accessibility-reviewer.md  crew-api-guardian.md  crew-architect.md  crew-developer.md  crew-feedback.md  crew-implementer.md  (+6 more)
agents/: accessibility-reviewer.md  api-guardian.md  architect.md  crew-status.md  crew-worktree.md  developer.md  feedback.md  implementer.md  orchestrator.md  performance-analyst.md  reviewer.md  security-auditor.md  skeptic.md  technical-writer.md
commands/: crew-config.md  crew-cost-report.md  crew-resume.md  crew-status.md  crew.md  workflow-config.md  workflow-resume.md  workflow-status.md  workflow.md
config/: hooks-settings.json  workflow-config.yaml  worktree-permissions.json
crew-board/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crew-board/src/: app.rs  cleanup.rs  launcher.rs  main.rs  settings.rs  worktree.rs
crew-board/src/data/: mod.rs  task.rs
crew-board/src/ui/: beads_view.rs  cost_view.rs  detail_pane.rs  help_popup.rs  launch_popup.rs  mod.rs  status_bar.rs  styles.rs  task_list.rs
docs/: overview.md
scripts/: build-agents.py  check-bash-safety.py  check-workflow-complete.py  cleanup-worktree.py  context_preparation.py  crew_orchestrator.py  fix-worktree-paths.py  setup-worktree.py  validate-transition.py  workflow_state.py
(+30 files in other folders)
